Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ main {
 
 .about {
   flex-direction: column;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .about__name {
@@ -273,7 +273,7 @@ main {
 }
 
 .about__role {
-  margin-top: 1.2em;
+  margin-top: 1em;
 }
 
 .about__desc {
